--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         .location-card{padding:1.2rem;}
         .location-card h3{font-size:1.25rem;}
         .info-card{padding:1.4rem;}
+        .info-card h2{font-size:1.45rem !important;} /* 手機版卡片標題縮小 */
         .info-item{font-size:0.95rem;}
     }
 </style>
@@ -102,6 +103,7 @@
 <div id="info" class="content">
     <div style="max-width:900px;margin:0 auto;">
         <img src="https://static.gltjp.com/glt/data/article/21000/20215/20230530_012727_96baf0af_w1920.webp" class="hero-img-top" alt="札幌雪祭大雪雕">
+        
         <div class="info-card">
             <h2>航班資訊</h2>
             <div class="info-item"><span class="info-label">訂單號：</span> NE2512180117514479</div>
@@ -121,27 +123,17 @@
             <div class="info-item"><span class="info-label">Confirmation Code：</span> HMRJN9C4DT</div>
             <div class="info-item"><span class="info-label">網站：</span> <a href="https://statics.teams.cdn.office.net/evergreen-assets/safelinks/2/atp-safelinks.html" target="_blank">Airbnb 連結</a></div>
         </div>
-<div class="info-card">
+
+        <div class="info-card">
             <h2>行程資訊網站</h2>
-            <div class="info-item">
-                <a href="https://www.bigfang.tw/blog/post/41398024#index_id29" target="_blank">小樽一日遊</a>
-            </div>
-            <div class="info-item">
-                <a href="https://hokkaido.letsgojp.com/archives/762539/#h10" target="_blank">北海道神宮完全攻略</a>
-            </div>
-            <div class="info-item">
-                <a href="https://www.gltjp.com/zh-hant/article/item/11842/" target="_blank">白色戀人公園完整指南</a>
-            </div>
-            <div class="info-item">
-                <a href="https://www.gltjp.com/zh-hant/article/item/20215/" target="_blank">札幌必去景點19選</a>
-            </div>
-            <div class="info-item">
-                <a href="https://hokkaido.letsgojp.com/archives/637281/" target="_blank">札幌美食必吃推薦</a>
-            </div>
-            <div class="info-item">
-                <a href="https://www.gltjp.com/zh-hant/article/item/20658/" target="_blank">札幌必吃美食與推薦店家</a>
-            </div>
+            <div class="info-item"><a href="https://www.bigfang.tw/blog/post/41398024#index_id29" target="_blank">小樽一日遊</a></div>
+            <div class="info-item"><a href="https://hokkaido.letsgojp.com/archives/762539/#h10" target="_blank">北海道神宮完全攻略</a></div>
+            <div class="info-item"><a href="https://www.gltjp.com/zh-hant/article/item/11842/" target="_blank">白色戀人公園完整指南</a></div>
+            <div class="info-item"><a href="https://www.gltjp.com/zh-hant/article/item/20215/" target="_blank">札幌必去景點19選</a></div>
+            <div class="info-item"><a href="https://hokkaido.letsgojp.com/archives/637281/" target="_blank">札幌美食必吃推薦</a></div>
+            <div class="info-item"><a href="https://www.gltjp.com/zh-hant/article/item/20658/" target="_blank">札幌必吃美食與推薦店家</a></div>
         </div>
+
         <div class="info-card">
             <h2>JR 火車時刻表（主要路線）</h2>
             <div class="info-item"><strong>新千歲機場 ↔ 札幌站（Rapid Airport 快速列車）</strong><br>
