--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         .location-card{padding:1.2rem;}
         .location-card h3{font-size:1.25rem;}
         .info-card{padding:1.4rem;}
-        .info-card h2{font-size:1.45rem !important;} /* 手機版卡片標題縮小 */
+        .info-card h2{font-size:1.4rem !important;} /* 手機版卡片標題明顯縮小 */
         .info-item{font-size:0.95rem;}
     }
 </style>
