--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <style>
     :root{--gold:#FFD700;--blue:#4682B4;--red:#e74c3c;--pink:#FFB6C1;--romantic:#FF69B4;}
     body{margin:0;font-family:"Playfair Display",serif;background:#FFFFF0;color:#333;line-height:1.7;font-size:16px;overflow-x:hidden;}
-    .header{background:linear-gradient(135deg,var(--pink),var(--romantic));color:white;padding:2rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
-    .header h1{font-size:1.9rem;margin:0;}
-    .header p{font-size:1.3rem;margin:0.5rem 0 0;}
-    .tabs{max-width:1200px;margin:1.5rem auto 1rem;display:flex;justify-content:center;flex-wrap:nowrap;overflow-x:auto;border-bottom:4px solid var(--pink);padding:0 1rem;-webkit-overflow-scrolling:touch;}
-    .tab-btn{background:#fff;padding:0.8rem 1rem;font-size:1.15rem;cursor:pointer;border-radius:15px 15px 0 0;margin:0 0.2rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;white-space:nowrap;flex:0 0 auto;}
+    .header{background:linear-gradient(135deg,var(--pink),var(--romantic));color:white;padding:1.8rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
+    .header h1{font-size:1.7rem;margin:0;line-height:1.3;}
+    .header p{font-size:1.15rem;margin:0.4rem 0 0;line-height:1.3;}
+    .tabs{max-width:1200px;margin:1.2rem auto 0.8rem;display:flex;justify-content:center;flex-wrap:nowrap;overflow-x:auto;border-bottom:4px solid var(--pink);padding:0 1rem;-webkit-overflow-scrolling:touch;}
+    .tab-btn{background:#fff;padding:0.7rem 1rem;font-size:1.1rem;cursor:pointer;border-radius:15px 15px 0 0;margin:0 0.2rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;white-space:nowrap;flex:0 0 auto;}
     .tab-btn.active{background:var(--pink);color:#333;}
     .content{max-width:1100px;margin:0 auto 3rem;padding:0 1rem;display:none;}
     .content.active{display:block;}
@@ -29,9 +29,9 @@
     .meal{font-weight:bold;color:var(--romantic);}
     .ticket-link{display:block;background:var(--romantic);color:white;padding:1rem;text-align:center;border-radius:12px;font-weight:bold;margin:1rem 0;font-size:1rem;}
     .links a{display:inline-block;background:#ffebee;padding:0.7rem 1.2rem;border-radius:10px;margin:0.4rem;font-weight:600;font-size:0.95rem;}
-    .info-card{background:white;padding:1.8rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-bottom:2rem;}
-    .info-card h2{font-size:1.6rem;margin-bottom:1rem;color:var(--romantic);text-align:center;}
-    .info-item{margin:0.9rem 0;font-size:1rem;}
+    .info-card{background:white;padding:1.6rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-bottom:1.8rem;}
+    .info-card h2{font-size:1.5rem;margin-bottom:1rem;color:var(--romantic);text-align:center;}
+    .info-item{margin:0.8rem 0;font-size:1rem;}
     .info-label{font-weight:bold;color:var(--pink);}
     .place-list{margin:1.5rem 0;padding:1.2rem;background:#fff0f8;border-radius:12px;border-left:6px solid var(--pink);}
     .place-list h3{font-size:1.3rem;color:var(--romantic);margin-bottom:0.7rem;}
@@ -60,17 +60,17 @@
     .location-link{color:var(--romantic);font-weight:bold;text-decoration:underline;}
     @media (max-width:768px){
         body{font-size:15px;}
-        .header{padding:1.5rem 1rem;}
-        .header h1{font-size:1.6rem;}
-        .header p{font-size:1.1rem;}
-        .tabs{flex-wrap:nowrap;overflow-x:auto;padding-bottom:0.5rem;}
-        .tab-btn{padding:0.7rem 1rem;font-size:1.1rem;margin:0 0.2rem;}
+        .header{padding:1.4rem 1rem;}
+        .header h1{font-size:1.5rem;line-height:1.2;}
+        .header p{font-size:1.05rem;line-height:1.2;}
+        .tabs{flex-wrap:nowrap;overflow-x:auto;padding-bottom:0.4rem;}
+        .tab-btn{padding:0.6rem 0.9rem;font-size:1.05rem;margin:0 0.15rem;}
         .day{padding:1.4rem;border-left:8px solid var(--pink);}
         .day h2{font-size:1.45rem;}
-        .big-btn{padding:1.4rem;font-size:1.3rem;}
+        .big-btn{padding:1.3rem;font-size:1.3rem;}
         .detail-day{padding:1.4rem;}
         .hero-img{max-height:220px;}
-        .hero-img-top{max-height:260px;}
+        .hero-img-top{max-height:240px;}
         .step{padding:1rem;font-size:0.95rem;}
         .time{font-size:1rem;}
         .map-container iframe{height:380px;}
@@ -78,8 +78,8 @@
         .save-btn,.load-btn,.clear-btn{font-size:0.95rem;padding:0.8rem;}
         .location-card{padding:1.2rem;}
         .location-card h3{font-size:1.25rem;}
-        .info-card{padding:1.4rem;}
-        .info-card h2{font-size:1.4rem !important;}
+        .info-card{padding:1.3rem;}
+        .info-card h2{font-size:1.35rem !important;}
         .info-item{font-size:0.95rem;}
     }
 </style>
