--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 <style>
     :root{--gold:#FFD700;--blue:#4682B4;--red:#e74c3c;--pink:#FFB6C1;--romantic:#FF69B4;}
     body{margin:0;font-family:"Playfair Display",serif;background:#FFFFF0;color:#333;line-height:1.7;font-size:16px;overflow-x:hidden;}
-    .header{background:linear-gradient(135deg,var(--pink),var(--romantic));color:white;padding:1.8rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
-    .header h1{font-size:1.7rem;margin:0;line-height:1.3;}
-    .header p{font-size:1.15rem;margin:0.4rem 0 0;line-height:1.3;}
-    .tabs{max-width:1200px;margin:1.2rem auto 0.8rem;display:flex;justify-content:center;flex-wrap:wrap;border-bottom:4px solid var(--pink);padding:0 1rem;gap:0.3rem;}
-    .tab-btn{background:#fff;padding:0.7rem 0.9rem;font-size:1.05rem;cursor:pointer;border-radius:15px 15px 0 0;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;white-space:nowrap;flex:1 1 auto;text-align:center;max-width:180px;}
+    .header{background:linear-gradient(135deg,var(--pink),var(--romantic));color:white;padding:2rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
+    .header h1{font-size:1.9rem;margin:0;}
+    .header p{font-size:1.3rem;margin:0.5rem 0 0;}
+    .tabs{max-width:1200px;margin:1.5rem auto 1rem;display:flex;justify-content:center;flex-wrap:wrap;border-bottom:4px solid var(--pink);padding:0 1rem;}
+    .tab-btn{background:#fff;padding:0.9rem 1.4rem;font-size:1.3rem;cursor:pointer;border-radius:15px 15px 0 0;margin:0.3rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;flex:1 1 120px;text-align:center;max-width:200px;}
     .tab-btn.active{background:var(--pink);color:#333;}
     .content{max-width:1100px;margin:0 auto 3rem;padding:0 1rem;display:none;}
     .content.active{display:block;}
+    .sub-tabs{margin:1.5rem 0 1rem;display:flex;justify-content:center;border-bottom:2px solid var(--pink);}
+    .sub-tab-btn{background:#fff;padding:0.7rem 1.2rem;font-size:1.1rem;cursor:pointer;border-radius:12px 12px 0 0;margin:0 0.5rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;}
+    .sub-tab-btn.active{background:var(--pink);color:#333;}
+    .sub-content{display:none;}
+    .sub-content.active{display:block;}
     .day{background:white;padding:1.8rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-bottom:1.6rem;border-left:10px solid var(--pink);}
     .day h2{font-size:1.6rem;margin:0 0 1rem;color:var(--romantic);}
     .big-btn{background:var(--pink);color:#333;padding:1.2rem;font-size:1.4rem;width:100%;border:none;border-radius:14px;margin-top:1rem;cursor:pointer;font-weight:bold;}
@@ -29,9 +34,9 @@
     .meal{font-weight:bold;color:var(--romantic);}
     .ticket-link{display:block;background:var(--romantic);color:white;padding:1rem;text-align:center;border-radius:12px;font-weight:bold;margin:1rem 0;font-size:1rem;}
     .links a{display:inline-block;background:#ffebee;padding:0.7rem 1.2rem;border-radius:10px;margin:0.4rem;font-weight:600;font-size:0.95rem;}
-    .info-card{background:white;padding:1.6rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-bottom:2rem;}
-    .info-card h2{font-size:1.5rem;margin-bottom:1rem;color:var(--romantic);text-align:center;}
-    .info-item{margin:0.8rem 0;font-size:1rem;}
+    .info-card{background:white;padding:1.8rem;border-radius:18px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-bottom:2rem;}
+    .info-card h2{font-size:1.6rem;margin-bottom:1rem;color:var(--romantic);text-align:center;}
+    .info-item{margin:0.9rem 0;font-size:1rem;}
     .info-label{font-weight:bold;color:var(--pink);}
     .place-list{margin:1.5rem 0;padding:1.2rem;background:#fff0f8;border-radius:12px;border-left:6px solid var(--pink);}
     .place-list h3{font-size:1.3rem;color:var(--romantic);margin-bottom:0.7rem;}
@@ -43,6 +48,7 @@
     .location-card h3{font-size:1.35rem;margin:0 0 0.6rem;color:var(--romantic);}
     .location-card .time{font-size:0.95rem;color:#666;margin:0.4rem 0;}
     .location-card .desc{font-size:1rem;color:#555;margin:0.8rem 0;line-height:1.6;}
+    .location-card .price{font-size:0.95rem;color:#B8860B;font-weight:bold;margin-top:0.4rem;}
     .location-card a{font-weight:bold;color:var(--romantic);}
     .packing-list{max-width:800px;margin:2rem auto;}
     .packing-list h2{font-size:1.6rem;text-align:center;margin-bottom:1rem;}
@@ -55,20 +61,33 @@
     .save-btn{background:var(--pink);color:white;}
     .load-btn{background:var(--romantic);color:#333;}
     .clear-btn{background:var(--red);color:white;}
-    .back-to-overview{display:block;width:90%;max-width:400px;margin:3rem auto 1rem;padding:1.1rem;background:var(--romantic);color:#333;text-align:center;border-radius:50px;font-size:1.2rem;font-weight:bold;box-shadow:0 6px 20px rgba(0,0,0,0.2);cursor:pointer;}
     .back-top{display:block;width:90%;max-width:400px;margin:3rem auto 2rem;padding:1.1rem;background:var(--pink);color:white;text-align:center;border-radius:50px;font-size:1.2rem;font-weight:bold;box-shadow:0 6px 20px rgba(0,0,0,0.2);cursor:pointer;}
+    .back-to-overview{display:block;width:90%;max-width:400px;margin:1rem auto 2rem;padding:1.1rem;background:var(--romantic);color:#333;text-align:center;border-radius:50px;font-size:1.2rem;font-weight:bold;box-shadow:0 6px 20px rgba(0,0,0,0.2);cursor:pointer;}
     .location-link{color:var(--romantic);font-weight:bold;text-decoration:underline;}
     @media (max-width:768px){
-        .header{padding:1.4rem 1rem;}
-        .header h1{font-size:1.5rem;}
-        .header p{font-size:1.05rem;}
-        .tabs{flex-wrap:wrap;gap:0.2rem;padding:0 0.5rem;}
-        .tab-btn{padding:0.6rem 0.5rem;font-size:1rem;max-width:none;flex:1 1 18%;}
-        .back-to-overview{width:95%;font-size:1.1rem;padding:1rem;margin:2.5rem auto 1rem;}
-        .info-card{padding:1.3rem;}
-        .info-card h2{font-size:1.35rem;}
-        .hero-img-top{max-height:240px;}
+        body{font-size:15px;}
+        .header{padding:1.5rem 1rem;}
+        .header h1{font-size:1.6rem;}
+        .header p{font-size:1.1rem;}
+        .tabs{flex-direction:column;align-items:center;}
+        .tab-btn{width:85%;margin:0.4rem 0;padding:0.9rem;font-size:1.25rem;}
+        .sub-tabs{flex-direction:column;align-items:center;}
+        .sub-tab-btn{width:80%;margin:0.4rem 0;}
+        .day{padding:1.4rem;border-left:8px solid var(--pink);}
+        .day h2{font-size:1.45rem;}
+        .big-btn{padding:1.4rem;font-size:1.3rem;}
+        .detail-day{padding:1.4rem;}
+        .hero-img{max-height:220px;}
+        .hero-img-top{max-height:260px;}
+        .step{padding:1rem;font-size:0.95rem;}
+        .time{font-size:1rem;}
         .map-container iframe{height:380px;}
+        .packing-list input[type="checkbox"]{transform:scale(1.5);}
+        .save-btn,.load-btn,.clear-btn{font-size:0.95rem;padding:0.8rem;}
+        .location-card{padding:1.2rem;}
+        .location-card h3{font-size:1.25rem;}
+        .info-card{padding:1.4rem;}
+        .info-item{font-size:0.95rem;}
     }
 </style>
 </head>
@@ -86,6 +105,7 @@
     <div class="tab-btn" onclick="openTab('packing')">裝備清單</div>
     <div class="tab-btn" onclick="openTab('more')">更多地點</div>
 </div>
+
 <!-- 行程資訊頁 -->
 <div id="info" class="content">
     <div style="max-width:900px;margin:0 auto;">
@@ -447,6 +467,14 @@
 </div>
 
 <script>
+function openTab(tab){
+    document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
+    document.getElementById(tab).classList.add('active');
+    document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
+    document.querySelector(`.tab-btn[onclick="openTab('${tab}')"]`).classList.add('active');
+    window.scrollTo({top:0,behavior:'smooth'});
+}
+
 function openSubTab(subtab){
     document.querySelectorAll('.sub-content').forEach(c=>c.classList.remove('active'));
     document.getElementById(subtab).classList.add('active');
