--- a/index.html
+++ b/index.html
@@ -298,11 +298,13 @@
 <div id="more" class="content">
     <div style="max-width:900px;margin:0 auto;">
         <h2 style="text-align:center;color:var(--romantic);font-size:1.8rem;margin-bottom:1.5rem;">更多札幌推薦地點</h2>
-<div class="sub-tabs">
+
+        <div class="sub-tabs">
             <div class="sub-tab-btn active" onclick="openSubTab('attractions')">景點</div>
             <div class="sub-tab-btn" onclick="openSubTab('restaurants')">餐廳</div>
         </div>
-       <div id="attractions" class="sub-content active">
+
+        <div id="attractions" class="sub-content active">
         <div class="location-card">
             <h3><a href="https://www.google.com/maps/search/?api=1&query=%E7%99%BD%E8%89%B2%E6%88%80%E4%BA%BA%E5%85%AC%E5%9C%92+Sapporo" target="_blank">白色戀人公園</a></h3>
             <div class="time">開園時間：10:00–19:00</div>
@@ -393,6 +395,7 @@
             <div class="desc">北海道最大Outlet，品牌多、折扣深，購物掃貨好去處。</div>
             <a href="https://mitsui-shopping-park.com/mop/" target="_blank">官方網站</a>
         </div>
+               </div>
 <div id="restaurants" class="sub-content">
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97%E3%81%A0%E3%82%8B%E3%81%BE+%E6%9C%AC%E5%BA%97+Sapporo" target="_blank">成吉思汗だるま 本店</a></h3>
@@ -401,7 +404,6 @@
                 <div class="price">建議價格：HK$300–500/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1000007/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=Itadakimasu.+Sapporo" target="_blank">Itadakimasu.</a></h3>
                 <div class="time">營業時間：16:00–22:00</div>
@@ -409,7 +411,6 @@
                 <div class="price">建議價格：HK$400–600/人</div>
                 <a href="https://tabelog.com/en/hokkaido/A0101/A010103/1036161/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%A7%E9%BB%91%E5%B1%8B+Sapporo" target="_blank">大黒屋</a></h3>
                 <div class="time">營業時間：16:00–23:30</div>
@@ -417,7 +418,6 @@
                 <div class="price">建議價格：HK$350–550/人</div>
                 <a href="https://tabelog.com/tw/tokyo/A1301/A130103/13291185/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%A7%E8%A1%86%E7%82%AD%E7%81%AB%E7%83%A4%E8%82%89%E3%82%B8%E3%83%B3%E3%82%AE%E3%82%B9%E3%82%AB%E3%83%B3+%E3%83%9B%E3%83%AB%E3%83%A2%E3%83%B3%E9%85%92%E5%A0%B4+Sapporo" target="_blank">大衆炭火焼肉ジンギスカン ホルモン酒場</a></h3>
                 <div class="time">營業時間：16:00–23:30</div>
@@ -425,7 +425,6 @@
                 <div class="price">建議價格：HK$250–400/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1028121/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E3%81%97%E3%82%8D%E3%81%8F%E3%81%BE+Sapporo" target="_blank">しろくま</a></h3>
                 <div class="time">營業時間：18:00–01:00</div>
@@ -433,7 +432,6 @@
                 <div class="price">建議價格：HK$150–250/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1000800/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E9%AE%A8%E8%99%95+%E5%87%9C+Sapporo" target="_blank">鮨処 凜</a></h3>
                 <div class="time">營業時間：18:00–22:00</div>
@@ -441,7 +439,6 @@
                 <div class="price">建議價格：HK$800–1,500/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010101/1077179/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E3%81%99%E3%81%97%E3%81%A9%E3%82%93%E3%81%B6%E3%82%8A+Sapporo" target="_blank">すしどんぶり</a></h3>
                 <div class="time">營業時間：11:30–22:30</div>
@@ -449,7 +446,6 @@
                 <div class="price">建議價格：HK$200–400/人</div>
                 <a href="https://tabelog.com/tw/hokkaido/A0101/A010103/1077231/" target="_blank">Tabelog 連結</a>
             </div>
-
             <div class="location-card">
                 <h3><a href="https://www.google.com/maps/search/?api=1&query=%E9%AE%A8%E8%99%95+%E6%9A%81+Sapporo" target="_blank">鮨処 暁</a></h3>
                 <div class="time">營業時間：17:30–22:30</div>
@@ -459,11 +455,6 @@
             </div>
         </div>
     </div>
-</div>
- <div class="back-to-overview" onclick="openTab('overview')">
-            返回總覽
-        </div>
-
 </div>
 
 <script>
@@ -480,6 +471,12 @@ function openSubTab(subtab){
     document.getElementById(subtab).classList.add('active');
     document.querySelectorAll('.sub-tab-btn').forEach(b=>b.classList.remove('active'));
     document.querySelector(`.sub-tab-btn[onclick="openSubTab('${subtab}')"]`).classList.add('active');
+}
+
+function showDetail(day){
+    // 你的 details 物件內容
+    document.getElementById('detail-content').innerHTML = details[day] || '<p style="text-align:center;padding:2rem;color:#999;">此日內容建設中...</p>';
+    openTab('details');
 }
 function showDetail(day){
     const details = {
