--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     .header{background:linear-gradient(135deg,var(--pink),var(--romantic));color:white;padding:2rem 1rem;text-align:center;box-shadow:0 4px 20px rgba(0,0,0,0.1);}
     .header h1{font-size:1.9rem;margin:0;}
     .header p{font-size:1.3rem;margin:0.5rem 0 0;}
-    .tabs{max-width:1200px;margin:1.5rem auto 1rem;display:flex;justify-content:center;flex-wrap:wrap;border-bottom:4px solid var(--pink);padding:0 1rem;}
-    .tab-btn{background:#fff;padding:0.9rem 1.4rem;font-size:1.3rem;cursor:pointer;border-radius:15px 15px 0 0;margin:0.3rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;flex:1 1 120px;text-align:center;max-width:200px;}
+    .tabs{max-width:100%;margin:1.5rem auto 1rem;display:flex;justify-content:center;flex-wrap:wrap;border-bottom:4px solid var(--pink);padding:0 1rem;gap:0.5rem;}
+    .tab-btn{background:#fff;padding:0.9rem 1.2rem;font-size:1.25rem;cursor:pointer;border-radius:15px 15px 0 0;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;flex:1 1 140px;max-width:180px;text-align:center;}
     .tab-btn.active{background:var(--pink);color:#333;}
     .content{max-width:1100px;margin:0 auto 3rem;padding:0 1rem;display:none;}
     .content.active{display:block;}
-    .sub-tabs{margin:1.5rem 0 1rem;display:flex;justify-content:center;border-bottom:2px solid var(--pink);}
-    .sub-tab-btn{background:#fff;padding:0.7rem 1.2rem;font-size:1.1rem;cursor:pointer;border-radius:12px 12px 0 0;margin:0 0.5rem;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;}
+    .sub-tabs{margin:1.5rem 0 1rem;display:flex;justify-content:center;border-bottom:2px solid var(--pink);flex-wrap:wrap;gap:0.5rem;}
+    .sub-tab-btn{background:#fff;padding:0.7rem 1.2rem;font-size:1.1rem;cursor:pointer;border-radius:12px 12px 0 0;box-shadow:0 4px 12px rgba(0,0,0,0.1);font-weight:bold;flex:1 1 120px;max-width:200px;text-align:center;}
     .sub-tab-btn.active{background:var(--pink);color:#333;}
     .sub-content{display:none;}
     .sub-content.active{display:block;}
@@ -64,15 +64,15 @@
     .back-top{display:block;width:90%;max-width:400px;margin:3rem auto 2rem;padding:1.1rem;background:var(--pink);color:white;text-align:center;border-radius:50px;font-size:1.2rem;font-weight:bold;box-shadow:0 6px 20px rgba(0,0,0,0.2);cursor:pointer;}
     .back-to-overview{display:block;width:90%;max-width:400px;margin:1rem auto 2rem;padding:1.1rem;background:var(--romantic);color:#333;text-align:center;border-radius:50px;font-size:1.2rem;font-weight:bold;box-shadow:0 6px 20px rgba(0,0,0,0.2);cursor:pointer;}
     .location-link{color:var(--romantic);font-weight:bold;text-decoration:underline;}
-    @media (max-width:768px){
+  @media (max-width:768px){
         body{font-size:15px;}
         .header{padding:1.5rem 1rem;}
         .header h1{font-size:1.6rem;}
         .header p{font-size:1.1rem;}
-        .tabs{flex-direction:column;align-items:center;}
-        .tab-btn{width:85%;margin:0.4rem 0;padding:0.9rem;font-size:1.25rem;}
-        .sub-tabs{flex-direction:column;align-items:center;}
-        .sub-tab-btn{width:80%;margin:0.4rem 0;}
+        .tabs{gap:0.4rem;padding:0 0.5rem;}
+        .tab-btn{font-size:1.15rem;padding:0.8rem 1rem;flex:1 1 130px;max-width:160px;}
+        .sub-tabs{gap:0.4rem;}
+        .sub-tab-btn{font-size:1.05rem;padding:0.7rem 1rem;flex:1 1 130px;max-width:180px;}
         .day{padding:1.4rem;border-left:8px solid var(--pink);}
         .day h2{font-size:1.45rem;}
         .big-btn{padding:1.4rem;font-size:1.3rem;}
@@ -88,7 +88,7 @@
         .location-card h3{font-size:1.25rem;}
         .info-card{padding:1.4rem;}
         .info-item{font-size:0.95rem;}
-    }
+ }
 </style>
 </head>
 <body>
@@ -613,7 +613,21 @@ function showDetail(day){
         document.querySelector('.map-container').scrollIntoView({behavior: 'smooth', block: 'center'});
     }
 }
+<script>
+function openTab(tab){
+    document.querySelectorAll('.content').forEach(c=>c.classList.remove('active'));
+    document.getElementById(tab).classList.add('active');
+    document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
+    document.querySelector(`.tab-btn[onclick="openTab('${tab}')"]`).classList.add('active');
+    window.scrollTo({top:0,behavior:'smooth'});
+}
 
+function openSubTab(subtab){
+    document.querySelectorAll('.sub-content').forEach(c=>c.classList.remove('active'));
+    document.getElementById(subtab).classList.add('active');
+    document.querySelectorAll('.sub-tab-btn').forEach(b=>b.classList.remove('active'));
+    document.querySelector(`.sub-tab-btn[onclick="openSubTab('${subtab}')"]`).classList.add('active');
+}
 // 裝備清單儲存功能
 const checkboxes = document.querySelectorAll('.pack-item');
 const saveBtn = document.getElementById('savePacking');
