--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ function showDetail(day){
         </div>`
 };
 
-    document.getElementById('detail-content').innerHTML = details[day] || '<p style="text-align:center;padding:2rem;color:#999;">此日內容建設中...</p><div class="back-to-overview" onclick="openTab(\'overview\')">返回總覽</div>';
+    document.getElementById('detail-content').innerHTML = details[day] || '<p style="text-align:center;padding:2rem;color:#999;">此日內容建設中...</p>';
     openTab('details');
 }
 
